@@ -81,10 +81,4 @@
 <div id="iheart"></div>
 </div>
 
-<div class="adverts">
-<h1>Perl Promotions</h1>
-<script type="text/javascript" src="http://adserver.szabgab.com/ads/direct_link_selflink.js?cnt=5&amp;noself=1"></script>
-<p align="center">Ads provide by<br /> <a href="http://adserver.szabgab.com" title="The Perl Community AdServer">The Perl Community AdServer</a></p>
-</div>
-
 [% END %]
